# bucket-pull

./: .gitignore  README.md  bucket-pull  pyproject.toml  requirements.txt  setup.cfg
bucket_pull/: __init__.py  __main__.py  cli.py
